--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiofiles==0.8.0
 aiohttp==3.8.0
 aiosignal==1.2.0
 Async-OAuthlib==0.0.9
-async-timeout==3.0.1
+async-timeout==4.0.0a3
 attrs==21.4.0
 blinker==1.4
 cachetools==5.0.0
