--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiofiles==0.8.0
-aiohttp==3.8.0
+aiohttp==3.8.1
 aiosignal==1.2.0
 Async-OAuthlib==0.0.9
 async-timeout==4.0.0a3
@@ -29,7 +29,7 @@ linereader==1.0.0
 MarkupSafe==2.0.1
 motor==2.5.1
 multidict==6.0.2
-nextcord==2.0.0a10
+nextcord==2.1.0
 nextcord-ext-ipc==2.2.1
 oauthlib==3.2.0
 Panda3D==1.10.11
